@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-16T16:13:00Z",
+  "timestamp" : "2022-06-17T08:17:23Z",
   "count_outdated" : 404,
   "uniques_outdated" : 23,
-  "count" : 416,
-  "uniques" : 27,
+  "count" : 417,
+  "uniques" : 28,
   "views" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
@@ -30,6 +30,13 @@
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 6,
       "count_minmax": [ 2, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
