@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 1,
   "views": [
     {
@@ -20,6 +20,11 @@
     {
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 6,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
