@@ -1,3 +1,10 @@
+2022-06-17T08:17:23Z:
+* notice: last 14d: unq all: 1 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 23 404 / 27 416
+* notice: next accum: outdated-unq outdated-all / unq all: 23 404 / 28 417
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-17]
+
 2022-06-16T16:13:00Z:
 * notice: last 14d: unq all: 1 12
 * notice: prev accum: outdated-unq outdated-all / unq all: 23 404 / 27 412
